--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/styles.css">
-    <title>Webfllow x Vite Starter</title>
+    <title>Vite App</title>
   </head>
   <body>
-    <div id="app">
-      <h1>Webfllow x Vite Starter</h1>
-    </div>
+    <h1>Hello World</h1>
     <script type="module" src="/src/js/index.js"></script>
   </body>
 </html>
